Add variables page

--- a/main/mkdocs.yml
+++ b/main/mkdocs.yml
@@ -100,7 +100,7 @@ nav:
         - learn/csharp/hello-world.md
 
       - C# Basics:
-        - pages/coming-soon.md
+        - learn/csharp/variables.md
 
       - Control Flow:
         - pages/coming-soon.md
