Add integers page

--- a/main/mkdocs.yml
+++ b/main/mkdocs.yml
@@ -101,6 +101,7 @@ nav:
 
       - C# Basics:
         - learn/csharp/variables.md
+        - learn/csharp/integers.md
 
       - Control Flow:
         - pages/coming-soon.md
